--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>riviox</title>
     <script src="https://cdn.jsdelivr.net/npm/emoji-toolkit@8.0.0/lib/js/joypixels.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="assets/avatar.png"/>
+    <link rel="icon" type="image/x-icon" href="https://riviox.is-a.dev/assets/avatar.png"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/emoji-toolkit@8.0.0/extras/css/joypixels.min.css"/>
     <link rel="stylesheet" href="style.css"/>
   </head>
