added about me button

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <meta name="description" content="my website or smth"/>
+    <meta name="description" content="about me"/>
     <meta name="keywords" content="riviox, rust, pug, website, code, github, flash"/>
     <meta name="author" content="riviox"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
